synched Magisk_Modules.html with the webpage http://bnsmb.de/Magisk_Modules.html

--- a/Magisk_Modules.html
+++ b/Magisk_Modules.html
@@ -14450,7 +14450,7 @@ href="https://www.linuxfromscratch.org/blfs/view/svn/basicnet/libtirpc.html"
 href="https://xdaforums.com/t/module-magisk-modules-with-unix-binaries-compiled-for-the-android-os.4687095/"
       target="_blank" moz-do-not-send="true">https://xdaforums.com/t/module-magisk-modules-with-unix-binaries-compiled-for-the-android-os.4687095/</a><br>
     <br>
-    <br>
+    &nbsp; <br>
     <hr width="100%" size="2"><br>
     <details open="">
       <summary><b>Show or Hide Table</b></summary>
