synched Magisk_Modules.html with the webpage http://bnsmb.de/Magisk_Modules.html

--- a/Magisk_Modules.html
+++ b/Magisk_Modules.html
@@ -15234,7 +15234,8 @@ href="https://xdaforums.com/t/module-magisk-module-with-protoc-binaries-librarie
       <br>
       <br>
       The <a href="#magisk_module_with_gdb">Magisk Module with gdb</a>
-      contains the debugger <b>gdb</b> for Android:<br>
+      contains the debugger <a href="https://sourceware.org/gdb"
+        target="_blank"><b>gdb</b></a> for Android:<br>
       <br>
       <samp>ASUS_I006D:/ $ <b>gdb --version</b><br>
         <b>GNU gdb (GDB) 16.3</b><br>
@@ -15404,6 +15405,9 @@ href="https://xdaforums.com/t/module-magisk-module-with-protoc-binaries-librarie
       The statically linked binaries can also be used if the phone is
       booted into a recovery.<br>
       <br>
+      Information on using <b>gdb</b> can be found here:&nbsp; <a
+        href="https://sourceware.org/gdb" target="_blank">https://sourceware.org/gdb
+      </a><br>
       <br>
       <b>Notes</b><br>
       <br>
